# gev-ai

./: .env  .gitignore  DEVELOPMENT_ROADMAP.md  README.md  alembic.ini  example.env  pyproject.toml  sample-executable
alembic/: env.py
alembic/versions/: 223c60b4269d_renew_revisions.py  41317f52eb7a_add_tasks_table.py  5c1fe0bf3b90_create_tasks_table.py  827b5fd7080a_add_terminal_history_table.py
docs/: RAG_TERMINAL_HISTORY.md
gev-ai/: main.py
gev-ai/agents/: google_search_agent.py  interfaces.py  main_agent.py
gev-ai/core/: interfaces.py  orchestrator.py
gev-ai/database/models/: issues.py  todo_tasks.py
gev-ai/database/todo_tasks/: todo-schema.md  todo-schema.yml
gev-ai/prompts/: gemini_system_prompt.py  google_search_agent_prompt.py  main_agent_prompt.py
gev-ai/services/: __init__.py  genai_service.py  system_info.py
gev-ai/settings/: config.py  settings.py
gev-ai/tools/: interfaces.py  read_files.py  system_health.py  weather_tool.py
gev-ai/utils/: history_parser.py  interfaces.py
gev_ai/: main.py
gev_ai/agents/: fitness_agent.py  google_search_agent.py  interfaces.py  main_agent.py
gev_ai/core/: orchestrator.py
gev_ai/prompts/: fitness_agent_prompt.py  google_search_agent_prompt.py  main_agent_prompt.py
gev_ai/services/: logger.py  system_info.py  terminal_history_rag.py
gev_ai/settings/: config.py  settings.py
gev_ai/tools/: tool_utils.py
scripts/: install-windows.bat  install.sh
tests/: README.md  conftest.py  test_interfaces.py  test_settings.py  test_terminal_history_rag.py  test_todo.py  test_todo.py.disabled
(+23 files in other folders)
